# convert_mcp_server

./: .env.example  .flake8  .gitignore  COMPLETE_SETUP.md  DEPLOYMENT.md  Dockerfile  README.md  config.json  converter.py  deploy.py  main.py  pyproject.toml  requirements.txt  run_server.py  setup.py  test_api.py  verify_mcp.py
.github/workflows/: lint-and-test.yml  publish-to-pypi.yml
