[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "converter-api"
version = "1.0.0"
description = "File converter API with MCP server support"
authors = [
    {name = "Converter API"}
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "ffmpeg-python>=0.2.0",
    "Pillow>=8.0.0",
    "python-docx",
    "PyMuPDF",
    "reportlab",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "fastmcp>=2.11.2"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "requests"
]

[tool.hatch.build.targets.wheel]
packages = ["converter"]

[tool.uv]
dev-dependencies = [
    "flake8"
]
